<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PassRouteSelection">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass_route_selection"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:textColor="#ff0000"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/dist_wise_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_wise_pass"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/fixed_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed_pass"
            />

<!--        <Button-->
<!--            android:id="@+id/back"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Back"-->
<!--            />-->

    </LinearLayout>
</LinearLayout>