<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
    android:orientation="vertical">

  <ImageView
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:layout_gravity="center"
      android:layout_marginTop="20dp"
      android:background="@drawable/rounded_corner"
      android:id="@+id/image"
      />

    <Button
        android:id="@+id/capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/capture"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="16dp" />

  <Button
      android:id="@+id/browse"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/browse"
      android:layout_marginTop="5dp"
      tools:layout_editor_absoluteX="16dp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="2"
    android:orientation="horizontal">

<!--    <Button-->
<!--        android:id="@+id/prev"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:layout_marginRight="16dp"-->
<!--        android:text="@string/back"-->
<!--        android:layout_marginTop="10dp"-->
<!--        tools:layout_editor_absoluteX="16dp" />-->


    <Button
        android:id="@+id/clear"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/clear"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/next"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/next"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="16dp" />


  </LinearLayout>

<!--    <ImageView-->
<!--        android:id="@+id/imageCapture"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginLeft="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginRight="8dp"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:contentDescription="@string/image_capturing"-->
<!--        android:scaleType="fitStart"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:srcCompat="@drawable/md" />-->

  </LinearLayout>

  <ProgressBar
      android:id="@+id/simpleProgressBar"
      android:layout_width="wrap_content"
      android:layout_centerInParent="true"
      android:visibility="gone"
      android:layout_height="wrap_content" />

</RelativeLayout>